--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>hello world</h1>
-    <a href="index.html" class="btn">
+    <nav class="main-navbar">
+        <ul>
+        <li>
+            <a href="hero.html">hero</a>
+        </li>
+        <li>
+            <a href="cards.html">cards</a>
+        </li>
+        <li>
+            <a href="tiles.html">tiles</a>
+        </li>
+        <li>
+            <a href="layout.html">layout</a>
+        </li>
+        </ul>
+    </nav>
+    <!-- <a href="index.html" class="btn">
         back to home
-    </a>
+    </a> -->
 </body>
 </html>
