added hero section

--- a/hero.html
+++ b/hero.html
@@ -16,10 +16,10 @@
 
 <body>
     <header class="hero-header">
-        <hero class="banner">
+        <div class="hero-banner">
             <h1>welcome to grid</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti doloribus quaerat eius consectetur placeat vero saepe, natus eos quasi deleniti.</p>
-        </hero>
+        </div>
     </header>
     <a href="index.html" class="btn">
         back to home
