--- a/layout.html
+++ b/layout.html
@@ -15,7 +15,12 @@
 </head>
 
 <body>
-
+<main class="main">
+    <!-- header -->
+    <header class="header">
+        
+    </header>
+</main>
     <a href="index.html" class="btn">
         back to home
     </a>
