--- a/layout.html
+++ b/layout.html
@@ -18,8 +18,40 @@
 <main class="main">
     <!-- header -->
     <header class="header">
-        
+        <h2>grid makes layout easy</h2>
     </header>
+    <!-- navbar -->
+    <nav class="navbar">
+        <ul>
+            <li>
+                <a href="hero.html">hero</a>
+            </li>
+            <li>
+                <a href="cards.html">cards</a>
+            </li>
+            <li>
+                <a href="tiles.html">tiles</a>
+            </li>
+            <li>
+                <a href="layout.html">layout</a>
+            </li>
+        </ul>
+    </nav>
+    <!-- content -->
+    <section class="content">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur eum veniam vitae quibusdam voluptatibus doloremque velit. Labore, optio repellendus! Ducimus enim minima veniam magnam saepe tempora corrupti. Vel non voluptatum architecto, aliquid ducimus eligendi quas deserunt expedita iste ullam aspernatur, numquam unde necessitatibus mollitia, cum natus veniam dignissimos est voluptatibus. Laboriosam odio incidunt nisi magni iusto qui illum soluta a repellendus perferendis, labore dolor beatae non tempora corrupti velit! Soluta consequatur numquam placeat animi architecto!</p>
+    </section>
+    <!-- sidebar -->
+    <section class="sidebar">
+        <span><i class="fab fa-twitter"></i></span>
+        <span><i class="fab fa-facebook"></i></span>
+        <span><i class="fab fa-squarespace"></i></span>
+        <span><i class="fab fa-linkedin"></i></span>
+        </section>
+<!-- footer -->
+<div class="footer">
+    <p>copyright &copy; all rights reserved</p>
+</div>
 </main>
     <a href="index.html" class="btn">
         back to home
